# issue-async-cython-pickle

./: .gitignore  README.md
my_module/: pyproject.toml  setup.py
my_module/my_module/: demo_counter.py
my_module/tests/: test_async_cython.py
scripts/: test-with-cython.sh
